z-index fixes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2060,6 +2060,7 @@ div[data-verttical-start-2] {
     height: 100px;
     cursor: pointer;
     background: url(../images/CaseStudy/play-button.svg) no-repeat 50% 50% / contain;
+    z-index: 2;
   }
   &__label {
     position: absolute;
